--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -5,7 +5,7 @@
    "id": "b9508937",
    "metadata": {},
    "source": [
-    "# Deep Learning for Automatic Semantic Segmentation of EHG Recordings: A Tool for Approaching its Use in Clinical Practice\n",
+    "# Automatic Semantic Segmentation of EHG Recordings by Deep Learning: an Approach to a Screening Tool for Use in Clinical Practice\n",
     "\n",
     "Félix Nieto del Amor 1 (feniede@ci2b.upv.es),\n",
     "Yiyao Ye Lin 1,4 (yiye@ci2b.upv.es),\n",
