--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -50,14 +50,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From D:\\202202\\to_publish\\EHGAutoSegNet\\venv\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "WARNING:tensorflow:From D:\\virtual_envs\\venv_202403\\venv_202403\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# from EHGAutoSegNet.signal_processor import process_files_and_zip\n",
-    "import EHGAutoSegNet"
+    "import ehgautosegnet"
    ]
   },
   {
@@ -189,9 +188,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From D:\\202202\\to_publish\\EHGAutoSegNet\\venv\\lib\\site-packages\\keras\\src\\backend.py:1398: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "WARNING:tensorflow:From D:\\virtual_envs\\venv_202403\\venv_202403\\lib\\site-packages\\keras\\src\\backend.py:1398: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
       "\n",
-      "WARNING:tensorflow:From D:\\202202\\to_publish\\EHGAutoSegNet\\venv\\lib\\site-packages\\keras\\src\\backend.py:6642: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+      "WARNING:tensorflow:From D:\\virtual_envs\\venv_202403\\venv_202403\\lib\\site-packages\\keras\\src\\backend.py:6642: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
       "\n",
       "Processing file: tpehg1301m.mat... \n",
       "Processing file: tpehg1746m.mat... \n",
@@ -323,7 +322,7 @@
    ],
    "source": [
     "# Function to process files and create a zip archive\n",
-    "EHGAutoSegNet.process_files_and_zip(config)"
+    "ehgautosegnet.process_files_and_zip(config)"
    ]
   },
   {
